search font size set to 16px to avoid auto-zoom on ios

--- a/src/Search.css
+++ b/src/Search.css
@@ -1,6 +1,7 @@
 .search {
   position: relative;
   width: 250px;
+  font-size: 16px;
 }
 .search > input {
   width: 100%;
